--- a/aboutMe.html
+++ b/aboutMe.html
@@ -18,11 +18,11 @@
   </head>
 
   <body>
-    <div ng-cloak ng-controller="AppCtrl" layout="column" layout-fill md-theme="projects"><!--theme declaration-->
+    <div ng-cloak ng-controller="AppCtrl" layout="column" layout-fill><!--theme declaration-->
       <md-toolbar style="background-color: #fff; color: #888">
         <div class="md-toolbar-tools">
           
-          <span class="mdl-layout-title">{{data.title}}</span>
+          <span class="mdl-layout-title">Jonathan Beckman</span>
           <span flex></span>
           <div class="mdl-layout-spacer"></div>
           
@@ -53,7 +53,7 @@
                 <div>
                   <div class="hobbyTile">
                     <div id="hobbyPic">
-                        <img id="tilePicGif" src="images/motorcycle.gif">
+                        <img id="tilePicGif" src="images/motorcycle_frame.jpg">
                     </div>
                     <md-button class="md-icon-button hobbyTileButton" ng-href="{{aboutMeCard.link}}">
                       <md-icon style="color: #fff">photo_album</md-icon>
