--- a/aboutMe.html
+++ b/aboutMe.html
@@ -55,7 +55,10 @@
                     <div id="hobbyPic">
                         <img id="tilePicGif" src="images/motorcycle_frame.jpg">
                     </div>
-                    <md-button class="md-icon-button hobbyTileButton" ng-href="{{aboutMeCard.link}}">
+                    <md-button class="md-icon-button hobbyTileButton" style="right: 64px" ng-click="resetGif()">
+                      <md-icon style="color: #fff">replay</md-icon>
+                    </md-button>  
+                    <md-button class="md-icon-button hobbyTileButton" href="">
                       <md-icon style="color: #fff">photo_album</md-icon>
                     </md-button>
                     <div class="hobbyPicText">
