Removed ng-cloak

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <div ng-cloak ng-controller="AppCtrl" layout="column" layout-fill><!--theme declaration-->
+    <div ng-controller="AppCtrl" layout="column" layout-fill><!--theme declaration-->
       <md-toolbar style="background-color: #fff; color: #888">
         <div class="md-toolbar-tools">
           
