More small fixes. Ready to host on unibeck.xyz

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <span flex></span>
           <div class="mdl-layout-spacer"></div>
           
-          <a href="https://github.com/rajonbeckman">
+          <a href="https://github.com/unibeck">
             <md-icon md-svg-src="images/github.svg" class="social-button github"></md-icon>
           </a>
           <a href="https://www.linkedin.com/in/jonathantbeckman">
@@ -170,7 +170,7 @@
           </md-content>
         </div>
         <div>
-          <p class="footer-text" style="background-color: #607D8B">All artwork, photos, code, and documents available on this site are property of Jonathan Beckman. For permission to use materials found of this site please contact me via email. © 2015-2016 Jonathan Beckman, All rights reserved.</p>
+          <p class="footer-text" style="background-color: #607D8B; font-size: small">All artwork, photos, code, and documents available on this site are property of Jonathan Beckman. For permission to use materials found of this site please contact me via email. © 2015-2016 Jonathan Beckman, All rights reserved.</p>
           <p class="footer-text" style="background-color: #455A64; font-size: small">Powered by Angular Material. Code licensed under the MIT License. Icons proivided by FontAwesome and Google Material Design icon library.</p>
         </div>
       </section>
