Trying to fixes mobile Safari problems

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </md-toolbar>
       <section layout="column" role="main" flex>
         <div>
-          <md-content flex class="full-page">
+          <md-content flex layout="column" class="full-page">
             <div class="welcome-img">
               <div class="md-display-2 aboutme-title side-margin" style="padding-top: 48px">Welcome</div>
               <div class="md-headline aboutme-title side-margin" style="padding-top: 16px">You're using the first website that I have built. Here you can find all of my notable achievements through-out my career as a software engineer, my contact information, and some other personal updates of my life.</div>
