Configure firebase hosting

--- a/public/aboutMe.html
+++ b/public/aboutMe.html
@@ -150,6 +150,7 @@
           <div>
             <p class="footer-text" style="background-color: #607D8B; font-size: small">All artwork, photos, code, and documents available on this site are property of Jonathan Beckman. For permission to use materials found of this site please contact me via email. © 2015-2016 Jonathan Beckman, All rights reserved.</p>
             <p class="footer-text" style="background-color: #455A64; font-size: small">Powered by Angular Material. Code licensed under the MIT License. Icons proivided by FontAwesome and Google Material Design icon library.</p>
+          </div>
         </md-content>
       </section>
     </div>
