Configure firebase hosting

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
                 <div md-whiteframe="2" style="border-color: #66BB6A" class="sectionBorder">
                   <md-toolbar class="section-text-container" style="background-color: #66BB6A !important;">
                     <div class="md-display-1 section-text">Career
-                      <md-button class="section-button" aria-label="Download Resume" href="documents/Resume.pdf" target="_blank">
+                      <md-button class="section-button" aria-label="Download Resume" href="https://firebasestorage.googleapis.com/v0/b/personalwebsite-4caa3.appspot.com/o/public%2FResume.pdf?alt=media" target="_blank">
                       Resume
                         <md-icon >file_download</md-icon>
                       </md-button>
