Updated header links and added a 404 page

--- a/public/index.html
+++ b/public/index.html
@@ -30,15 +30,15 @@
           <span class="mdl-layout-title">Jonathan Beckman</span>
           <span flex></span>
           <div class="mdl-layout-spacer"></div>
-          
+
+          <a href="https://gitlab.com/jbeckman">
+            <md-icon md-svg-src="images/gitlab.svg" class="social-button gitlab"></md-icon>
+          </a>
           <a href="https://github.com/unibeck">
             <md-icon md-svg-src="images/github.svg" class="social-button github"></md-icon>
           </a>
           <a href="https://www.linkedin.com/in/jonathantbeckman">
             <md-icon md-svg-src="images/linkedin.svg" class="social-button linkedin"></md-icon>
-          </a>
-          <a href="https://www.google.com/+JonathanBeckman9">
-            <md-icon md-svg-src="images/google_plus.svg" class="social-button google-plus"></md-icon>
           </a>
         </div>
       </md-toolbar>
