--- a/public/aboutMe.html
+++ b/public/aboutMe.html
@@ -107,7 +107,7 @@
 
                 <!-- Skills Section -->
                 <div md-whiteframe="2" style="margin-top: 32px;">
-                  <div class="md-display-1 skillsTitle">Skills</div>
+                  <div class="md-display-1 skillsTitle">Highlighted Skills</div>
                   <!-- Use to make SVG donuts from D3
                   <div style="background-color: #fff;>
                     <div class="skills" layout="column" layout-align="space-around center">
@@ -128,19 +128,19 @@
                     <div class="skills" layout="column" layout-align="space-around center">
                       <div class="md-headline donutNum">8</div>
                       <svg class="donuts" width="200" height="100" viewBox="0, 0, 232, 116"><g transform="translate(116,116)"><g class="slice"><path fill="#FFC107" d="M80.90169943749474,-58.778525229247315A100,100 0 0,1 100,0L50,0A50,50 0 0,0 40.45084971874737,-29.389262614623657Z"></path></g><g class="slice"><path fill="#2196F3" d="M-100,-1.2246467991473532e-14A100,100 0 0,1 80.90169943749474,-58.778525229247315L40.45084971874737,-29.389262614623657A50,50 0 0,0 -50,-6.123233995736766e-15Z"></path></g></g></svg>
+                      <div class="md-headline" style="padding-bottom: 16px">Containerization</div>
+                    </div>
+                    <md-divider></md-divider>
+                    <div class="skills" layout="column" layout-align="space-around center">
+                      <div class="md-headline donutNum">8</div>
+                      <svg class="donuts" width="200" height="100" viewBox="0, 0, 232, 116"><g transform="translate(116,116)"><g class="slice"><path fill="#FFC107" d="M80.90169943749474,-58.778525229247315A100,100 0 0,1 100,0L50,0A50,50 0 0,0 40.45084971874737,-29.389262614623657Z"></path></g><g class="slice"><path fill="#2196F3" d="M-100,-1.2246467991473532e-14A100,100 0 0,1 80.90169943749474,-58.778525229247315L40.45084971874737,-29.389262614623657A50,50 0 0,0 -50,-6.123233995736766e-15Z"></path></g></g></svg>
+                      <div class="md-headline" style="padding-bottom: 16px">Process Governance</div>
+                    </div>
+                    <md-divider></md-divider>
+                    <div class="skills" layout="column" layout-align="space-around center">
+                      <div class="md-headline donutNum">7</div>
+                      <svg class="donuts" width="200" height="100" viewBox="0, 0, 232, 116"><g transform="translate(116,116)"><g class="slice"><path fill="#FFC107" d="M58.778525229247315,-80.90169943749474A100,100 0 0,1 100,0L50,0A50,50 0 0,0 29.389262614623657,-40.45084971874737Z"></path></g><g class="slice"><path fill="#2196F3" d="M-100,-1.2246467991473532e-14A100,100 0 0,1 58.778525229247315,-80.90169943749474L29.389262614623657,-40.45084971874737A50,50 0 0,0 -50,-6.123233995736766e-15Z"></path></g></g></svg>
                       <div class="md-headline" style="padding-bottom: 16px">Spring Boot</div>
-                    </div>
-                    <md-divider></md-divider>
-                    <div class="skills" layout="column" layout-align="space-around center">
-                      <div class="md-headline donutNum">7</div>
-                      <svg class="donuts" width="200" height="100" viewBox="0, 0, 232, 116"><g transform="translate(116,116)"><g class="slice"><path fill="#FFC107" d="M58.778525229247315,-80.90169943749474A100,100 0 0,1 100,0L50,0A50,50 0 0,0 29.389262614623657,-40.45084971874737Z"></path></g><g class="slice"><path fill="#2196F3" d="M-100,-1.2246467991473532e-14A100,100 0 0,1 58.778525229247315,-80.90169943749474L29.389262614623657,-40.45084971874737A50,50 0 0,0 -50,-6.123233995736766e-15Z"></path></g></g></svg>
-                      <div class="md-headline" style="padding-bottom: 16px">Distributed Systems</div>
-                    </div>
-                    <md-divider></md-divider>
-                    <div class="skills" layout="column" layout-align="space-around center">
-                      <div class="md-headline donutNum">7</div>
-                      <svg class="donuts" width="200" height="100" viewBox="0, 0, 232, 116"><g transform="translate(116,116)"><g class="slice"><path fill="#FFC107" d="M58.778525229247315,-80.90169943749474A100,100 0 0,1 100,0L50,0A50,50 0 0,0 29.389262614623657,-40.45084971874737Z"></path></g><g class="slice"><path fill="#2196F3" d="M-100,-1.2246467991473532e-14A100,100 0 0,1 58.778525229247315,-80.90169943749474L29.389262614623657,-40.45084971874737A50,50 0 0,0 -50,-6.123233995736766e-15Z"></path></g></g></svg>
-                      <div class="md-headline" style="padding-bottom: 16px">AngularJS</div>
                     </div>
                   </div>
                 </div>
